[gd_scene load_steps=16 format=2]

[ext_resource path="res://hud/health_bar/hp_under.png" type="Texture" id=1]
[ext_resource path="res://hud/health_bar/hp_bar.png" type="Texture" id=2]
[ext_resource path="res://hud/health_bar/hp_cover.png" type="Texture" id=3]
[ext_resource path="res://hud/health_bar/mp_bar.png" type="Texture" id=4]
[ext_resource path="res://hud/health_bar/mp_cover.png" type="Texture" id=5]
[ext_resource path="res://hud/health_bar/mp_under.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/fzxs12.tres" type="DynamicFont" id=7]
[ext_resource path="res://hud/health_bar/text_holder.tres" type="StyleBox" id=8]
[ext_resource path="res://hud/health_bar/hp_damage.png" type="Texture" id=9]
[ext_resource path="res://hud/health_bar/text_holder_R.tres" type="StyleBox" id=10]
[ext_resource path="res://hud/health_bar/boss_over.png" type="Texture" id=11]
[ext_resource path="res://hud/health_bar/boss_sg02.png" type="Texture" id=12]
[ext_resource path="res://hud/health_bar/boss_sg01.png" type="Texture" id=13]
[ext_resource path="res://hud/health_bar/boss_under.png" type="Texture" id=14]
[ext_resource path="res://hud/main_hud/hud_layer.gd" type="Script" id=15]

[node name="hud_layer" type="CanvasLayer"]
script = ExtResource( 15 )

[node name="hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="hud"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hud_h" type="HBoxContainer" parent="hud/margin"]
margin_right = 460.0
margin_bottom = 250.0
custom_constants/separation = 32

[node name="bars" type="VBoxContainer" parent="hud/margin/hud_h"]
margin_right = 168.0
margin_bottom = 250.0
custom_constants/separation = 0

[node name="coverh" type="TextureRect" parent="hud/margin/hud_h/bars"]
margin_right = 168.0
margin_bottom = 17.0
texture = ExtResource( 3 )

[node name="damage" type="TextureProgress" parent="hud/margin/hud_h/bars/coverh"]
show_behind_parent = true
margin_left = 20.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="TextureProgress" parent="hud/margin/hud_h/bars/coverh"]
show_behind_parent = true
margin_left = 20.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coverm" type="TextureRect" parent="hud/margin/hud_h/bars"]
margin_top = 17.0
margin_right = 168.0
margin_bottom = 30.0
texture = ExtResource( 5 )

[node name="magicka" type="TextureProgress" parent="hud/margin/hud_h/bars/coverm"]
show_behind_parent = true
margin_left = 20.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Haniwa_lb" type="Label" parent="hud/margin/hud_h/bars"]
margin_top = 30.0
margin_right = 168.0
margin_bottom = 43.0
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "No Haniwa selected"

[node name="debug_lb" type="Label" parent="hud/margin/hud_h/bars"]
margin_top = 43.0
margin_right = 168.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 7 )
text = "
Debug Message:"

[node name="boss_pr" type="VBoxContainer" parent="hud/margin/hud_h"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 200.0
margin_right = 424.0
margin_bottom = 250.0
custom_constants/separation = 0

[node name="boss_lb" type="Label" parent="hud/margin/hud_h/boss_pr"]
margin_right = 224.0
margin_bottom = 13.0
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 7 )
text = "No boss"

[node name="cover" type="TextureRect" parent="hud/margin/hud_h/boss_pr"]
margin_top = 13.0
margin_right = 224.0
margin_bottom = 26.0
texture = ExtResource( 11 )

[node name="health2" type="TextureProgress" parent="hud/margin/hud_h/boss_pr/cover"]
show_behind_parent = true
margin_left = 20.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health1" type="TextureProgress" parent="hud/margin/hud_h/boss_pr/cover"]
show_behind_parent = true
margin_left = 20.0
margin_top = 2.0
margin_right = 222.0
margin_bottom = 40.0
texture_progress = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h" type="HBoxContainer" parent="hud/margin"]
margin_right = 460.0
margin_bottom = 250.0
alignment = 2

[node name="v" type="VBoxContainer" parent="hud/margin/h"]
margin_left = 340.0
margin_right = 460.0
margin_bottom = 250.0
alignment = 2

[node name="label" type="Label" parent="hud/margin/h/v"]
margin_top = 237.0
margin_right = 120.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 7 )
text = "アンロケイテッドヘル"
percent_visible = 0.0

[node name="Tween" type="Tween" parent="hud/margin/h/v/label"]

[node name="Timer" type="Timer" parent="hud/margin/h/v/label"]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]
